# pcloud-differential-estimation-benchmark

./: .gitignore  CMakeLists.txt  README.md  download_datasets.py
cmake/recipes/: ccache.cmake  polyscope.cmake  ponca.cmake
evaluation/: README.md  convert_pts_to_web.py  merge_dat_files.py  png_to_jpg.sh  run_all_experiments.sh  run_all_screenshots.sh  run_data_website.sh  run_experiments.py  run_screenshots.py
evaluation/cameras/: cameraSettings_Cup.json  cameraSettings_Goursat.json  cameraSettings_Haut_Carre.json  cameraSettings_Haut_Carre_Crop.json  cameraSettings_Haut_Carre_Zoom.json  cameraSettings_Liberty.json  cameraSettings_colorbar.json  cameraSettings_column_head.json  cameraSettings_galera.json  cameraSettings_implicit.json  cameraSettings_netsuke.json  cameraSettings_other.json  cameraSettings_pipe.json  cameraSettings_pipe_curve.json  cameraSettings_sheet_analytic.json  camera_Area_1_Site_1.json  camera_Area_1_Site_2_part_1.json  camera_Haut_Carre_Crop.json  camera_bildstein_station1_crop.json  camera_scene_00033.json  camera_scene_05009.json  camera_stgallencathedral_crop.json
evaluation/configs_data_website/: config_CAD.yaml  config_CAD_helios.yaml  config_PCPNet.yaml  config_implicit.yaml  config_implicit_helios.yaml
evaluation/configs_experiments/: config_CAD.yaml  config_CAD_helios.yaml  config_CAD_helios_knngraph.yaml  config_CAD_knngraph.yaml  config_PCPNet.yaml  config_churches.yaml  config_implicit.yaml  config_implicit_MLS.yaml  config_implicit_convergence.yaml  config_implicit_flip.yaml  config_implicit_float.yaml  config_implicit_helios.yaml  config_implicit_outlier.yaml  config_indoors.yaml  config_pipes.yaml
evaluation/configs_screenshots/: config_screens_indoors.yaml  config_screens_outdoors.yaml
evaluation/data_analysis/: README.md  convergence.ipynb  createLightDataframes.ipynb  generate_big_graph.ipynb  generate_big_tabs.ipynb  iteration_mls.ipynb  methods.py  toolbox.py  visualization_tools.py
src/IO/: PNGHandler.h  PointCloudDiff.h  Readers.h
src/estimators/: CMakeLists.txt  KDTree.h  KDTreeVectorOfVectorsAdaptor.h  README.md  compute_ASO.cpp  compute_PCPNet_error.cpp  compute_VCM.cpp  compute_jetfitting.cpp  compute_ponca_estimators.cpp  compute_ponca_neighbors.cpp
src/estimators/ASO/: AlgebraicShapeOperator.h
src/estimators/ponca_estimators/: estimators.h
src/estimators/ponca_estimators/adapters/: DifferentialQuantities.hpp  Estimator.h  EstimatorFactory.h  declarations.h  fitDefinitions.h  poncaAdapters.hpp  types.h
src/estimators/ponca_estimators/classes/: cnc_separate.h  covariance2DFit.h  covariance2DFit.hpp  localFrame.h  localFrame.hpp  meanCurvature.h  normalCovariance2DFit.h  normalCovariance2DFit.hpp  normalCovariance3DFit.h  normalCovariance3DFit.hpp  normalW.h  normalW.hpp  parabolicCylinder.h  parabolicCylinder.hpp  parabolicCylinderFit.h  parabolicCylinderFit.hpp  planeCurvature.h  quadric.h  quadric.hpp  quadricFit.h  quadricFit.hpp  shapeOperator2D.h  shapeOperator2D.hpp  sphereCurvature.h  varifolds.h  varifolds.hpp  waveJets.h  waveJets.hpp
src/generators/: CMakeLists.txt  README.md  generateFromImplicit.cpp  generate_adaptator_pcpnet.cpp
src/tools/: CADprocessing.cpp  CMakeLists.txt  README.md  addNormalsFromFile.cpp  comparePTS.cpp  displayPTS2.cpp  displayPTS_mesh.cpp  measure_normal_noise.cpp  meshCleaner.cpp  rescale_pointCloud.cpp
